# goppy

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  README.txt  index.html  params.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
doc/: Makefile  api.rst  conf.py  index.rst  installation.rst  kernel.rst  make.bat  requirements.txt  usage.rst
doc/pyplots/usage/: add.py  common.py  fit.py
goppy/: __init__.py  core.py  goppy.py  growable.py  kernel.py
goppy/test/: conftest.py  test_core.py  test_goppy.py  test_growable.py  test_kernel.py
