[tool.poetry]
authors = ["Jan Gosmann <jan@hyper-world.de>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python :: 2",
  "Programming Language :: Python :: 2.6",
  "Programming Language :: Python :: 2.7",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
description = "GopPy (Gaussian Online Processes for Python) is a pure Python module providing a Gaussian process implementation which allows 'to efficiently add new data online."
documentation = "https://goppy.readthedocs.io/en/latest/"
homepage = "https://github.com/jgosmann/goppy"
keywords = ["Gaussian processes", "machine learning", "online learning"]
license = "MIT"
name = "goppy"
readme = "README.rst"
repository = "https://github.com/jgosmann/goppy"
version = "1.1.1" # also update in doc/conf.py

[tool.poetry.dependencies]
numpy = ">=1.26.0,<3"
python = ">=3.9,<3.13"

[tool.poetry.group.dev.dependencies]
PyHamcrest = "^2.0.4"
black = ">=23.7.0"
isort = "^5.12.0"
matplotlib = "^3.7.2"
numpydoc = "^1.5.0"
pylint = "^3.0.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
sphinx = "^7.1.2"
sphinx-rtd-theme = "^1.2.2"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.isort]
profile = "black"
